trying new content alignment

--- a/general_lgbt_organizations.html
+++ b/general_lgbt_organizations.html
@@ -5,8 +5,16 @@
         <link rel="icon" type="image/svg" href="./img/favicon.svg" />
         <title>Worldwide LGBT Resources</title>
 <style>
-.readable_div {
+.readable-div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    max-width: 90%;
+    margin: auto;
+}
+.readable-text {
     max-width: 120ch;
+    margin: auto;
 }
 .flexbox {
     display: flex;
@@ -14,6 +22,9 @@
 }
 .box2 {
     width: 50%;
+}
+.put-left {
+    padding-right: 50%;
 }
 @media (max-aspect-ratio: 1/1) {
     .flexbox {
@@ -25,176 +36,194 @@
         width: 80%;
         margin: auto;
     }
+    .put-left {
+        padding-right: 0%;
+    }
 }
 </style>
     </head>
     <body>
-<h1>General LGBT Organizations</h1>
+<div class="readable-div">
+    <div class="readable-text">
+    <h1>General LGBT Organizations</h1>
 
-<p>
-    <i>* see other sections for specific needs*</i>
-    Use “ctrl” and “F” on keyboard to search keywords.
-</p>
+        <p>
+            <i>* see other sections for specific needs*</i>
+            Use “ctrl” and “F” on keyboard to search keywords.
+        </p>
 
-<h2 id="lgbt_orgs_by_country">Organisations by Country</h2>
+        <h2 id="lgbt_orgs_by_country">Organisations by Country</h2>
 
-<h3 id="lgbt_orgs_by_country_us">US</h3>
+        <h3 id="lgbt_orgs_by_country_us">US</h3>
 
-<p>
-    <i>More coming soon</i> 
-</p> 
+        <p>
+            <i>More coming soon</i> 
+        </p> 
 
-<p>
-    Are you or someone you know living in Florida and need access to “banned books”: <br>
-    <a href="https://firestorm.coop/bannedbooks.html">https://firestorm.coop/bannedbooks.html</a>  <br>
-    This library is sending LGBT books for free to kids in need!
-</p>
-<p>
-    Grant for gender affirming items (youth in southern states, 24 or younger):  <br>
-    <a href="https://wearefamilycharleston.org/tgncapplication">wearefamilycharleston.org</a> 
-</p>
-<p>
-    Organizations by state:<a href="https://marshap.org">https://marshap.org</a> 
-</p>
+        <p>
+            Are you or someone you know living in Florida and need access to “banned books”: <br>
+            <a href="https://firestorm.coop/bannedbooks.html">https://firestorm.coop/bannedbooks.html</a>  <br>
+            This library is sending LGBT books for free to kids in need!
+        </p>
+        <p>
+            Grant for gender affirming items (youth in southern states, 24 or younger):  <br>
+            <a href="https://wearefamilycharleston.org/tgncapplication">wearefamilycharleston.org</a> 
+        </p>
+        <p>
+            Organizations by state:<a href="https://marshap.org">https://marshap.org</a> 
+        </p>
 
 
-<h3 id="lgbt_orgs_by_country_eu">Europe</h3>
+        <h3 id="lgbt_orgs_by_country_eu">Europe</h3>
 
-<p>
-    <a href="https://jsis.washington.edu/euwesteurope/cideu-civil-society-inclusion-and-diversity-in-the-european-union/member-state-civil-society-resources/civil-society-organizations-lgbtq/">
-        jsis.washington.edu//cideu-civil-society-inclusion-and-diversity-in-the-european-union/
-    </a> 
-    (europe, uk, beligum, germany, ireland, etc)
-</p>
-
-<h4 id="lgbt_orgs_by_country_uk">UK</h4>
-<p>
-    Transactual:  <br>
-    <a href="https://transactual.org.uk">https://transactual.org.uk</a> <br>
-    (accessible “listening” tool on homepage. For HRT, Name changes, and more)
-</p>
-
-<h3 id="lgbt_orgs_by_country_ca">Canada</h3>
-
-<p>
-    coming soon (see other sections for specifics, or ask pongo)
-</p>
-
-<h3 id="lgbt_orgs_by_country_nz">New Zealand</h3>
-
-<p>
-    RainbowYouth <a href="https://ry.org.nz">https://ry.org.nz</a> 
-</p>
-
-<h3 id="lgbt_orgs_by_country_au">Australia</h3>
-
-<p>
-    Minus18 LGBT <a href="https://www.minus18.org.au/events">https://www.minus18.org.au/events</a> 
-</p>
-
-<h3 id="lgbt_orgs_by_country_dn">Denmark</h3>
-
-<p>
-    <a href="http://quku.dk/other-lgbtqia-organizations-unions-and-associations/">
-        http://quku.dk/other-lgbtqia-organizations-unions-and-associations/
-    </a><br>
-    (multiple sites listed there)
-</p>
-
-<div style="width:100%; height:1px; background-color:#000000;"></div>
-
-<h2 id="lgbt_swim_and_under_wear">Swimsuits & Underwear Brands</h2>
-
-<p>
-    <ul>
-        <li>
-            (Masc & Fem options) RubyShines
-            <a href="https://rubyshines.com/">
-                https://rubyshines.com/
+        <p>
+            <a href="https://jsis.washington.edu/euwesteurope/cideu-civil-society-inclusion-and-diversity-in-the-european-union/member-state-civil-society-resources/civil-society-organizations-lgbtq/">
+                jsis.washington.edu//cideu-civil-society-inclusion-and-diversity-in-the-european-union/
             </a> 
-        </li>
-        <li>
-            (Masc & Fem options) Rebirth Customs
-            <a href="https://rebirthgarments.com/#rebirthgarments">
-                https://rebirthgarments.com/#rebirthgarments
-            </a> 
-        </li>
-        <li>
-            (Masc binders,clothes) ShapeShifters 
-            <a href="https://shapeshifters.co/product.../garments/sportsbras/">
-                https://shapeshifters.co/product.../garments/sportsbras/
-            </a> 
-        </li>
-        <li>
-            (Swimsuits for trans masc) HumanKind
-            <a href="https://www.humankindclothing.com/">
-                https://www.humankindclothing.com/
-            </a> 
-        </li>
-        <li>
-            (swimwear,binders,underwear) Target
-            <a href="https://www.target.com/b/tomboyx/-/N-q643leppdgh">
-                https://www.target.com/b/tomboyx/-/N-q643leppdgh
-            </a> 
-        </li>
-        <li>
-            OutPlay 
-            <a href="https://shopoutplay.com/en-ca">
-                https://shopoutplay.com/en-ca
-            </a> 
-        </li>
-        <li>
-            (swimsuits for masc & fem) Chromat 
-            <a href="https://chromat.co/collections/swimwear">
-                https://chromat.co/collections/swimwear
-            </a> 
-        </li>
-        <li>
-            (swim for all) BeefCake 
-            <a href="https://www.beefcakeswimwear.com/">
-                https://www.beefcakeswimwear.com/
-            </a>
-        </li>
-        <li>
-            (masc-swim & binders) Muunne 
-            <a href="https://www.muunne.com/">
-                https://www.muunne.com/
-            </a>
-        </li>
-        <li>
-            (trans fem) Tuck Kits- safe for Swim 
-            <a href="https://unclockable.ca/products/flawless-tuck-kit">
-                https://unclockable.ca/products/flawless-tuck-kit
-            </a>
-        </li>
-        <li>
-            (trans fem underwear) 
-            <a href="https://fit4usolutions.com/products/mtf-underwear-for-transgender?variant=39938989359149">
-                https://fit4usolutions.com/products/mtf-underwear-for-transgender?variant=39938989359149
-            </a>
-        </li>
-        <li>
-            (trans fem underwear) 
-            <a href="https://www.tuckituppp.com/product-page/logothick?utm_source=google&utm_medium=wix_google_channel&utm_campaign=freelistings">
-                https://www.tuckituppp.com/product-page/logothick
-            </a>
-        </li>
-    </ul>
-</p>
+            (europe, uk, beligum, germany, ireland, etc)
+        </p>
+
+        <h4 id="lgbt_orgs_by_country_uk">UK</h4>
+        <p>
+            Transactual:  <br>
+            <a href="https://transactual.org.uk">https://transactual.org.uk</a> <br>
+            (accessible “listening” tool on homepage. For HRT, Name changes, and more)
+        </p>
+
+        <h3 id="lgbt_orgs_by_country_ca">Canada</h3>
+
+        <p>
+            coming soon (see other sections for specifics, or ask pongo)
+        </p>
+
+        <h3 id="lgbt_orgs_by_country_nz">New Zealand</h3>
+
+        <p>
+            RainbowYouth <a href="https://ry.org.nz">https://ry.org.nz</a> 
+        </p>
+
+        <h3 id="lgbt_orgs_by_country_au">Australia</h3>
+
+        <p>
+            Minus18 LGBT <a href="https://www.minus18.org.au/events">https://www.minus18.org.au/events</a> 
+        </p>
+
+        <h3 id="lgbt_orgs_by_country_dn">Denmark</h3>
+
+        <p>
+            <a href="http://quku.dk/other-lgbtqia-organizations-unions-and-associations/">
+                http://quku.dk/other-lgbtqia-organizations-unions-and-associations/
+            </a><br>
+            (multiple sites listed there)
+        </p>
+
+        <div style="width:100%; height:1px; background-color:#000000;"></div>
+
+        <h2 id="lgbt_swim_and_under_wear">Swimsuits & Underwear Brands</h2>
+
+        <p>
+            <ul>
+                <li>
+                    (Masc & Fem options) RubyShines
+                    <a href="https://rubyshines.com/">
+                        https://rubyshines.com/
+                    </a> 
+                </li>
+                <li>
+                    (Masc & Fem options) Rebirth Customs
+                    <a href="https://rebirthgarments.com/#rebirthgarments">
+                        https://rebirthgarments.com/#rebirthgarments
+                    </a> 
+                </li>
+                <li>
+                    (Masc binders,clothes) ShapeShifters 
+                    <a href="https://shapeshifters.co/product.../garments/sportsbras/">
+                        https://shapeshifters.co/product.../garments/sportsbras/
+                    </a> 
+                </li>
+                <li>
+                    (Swimsuits for trans masc) HumanKind
+                    <a href="https://www.humankindclothing.com/">
+                        https://www.humankindclothing.com/
+                    </a> 
+                </li>
+                <li>
+                    (swimwear,binders,underwear) Target
+                    <a href="https://www.target.com/b/tomboyx/-/N-q643leppdgh">
+                        https://www.target.com/b/tomboyx/-/N-q643leppdgh
+                    </a> 
+                </li>
+                <li>
+                    OutPlay 
+                    <a href="https://shopoutplay.com/en-ca">
+                        https://shopoutplay.com/en-ca
+                    </a> 
+                </li>
+                <li>
+                    (swimsuits for masc & fem) Chromat 
+                    <a href="https://chromat.co/collections/swimwear">
+                        https://chromat.co/collections/swimwear
+                    </a> 
+                </li>
+                <li>
+                    (swim for all) BeefCake 
+                    <a href="https://www.beefcakeswimwear.com/">
+                        https://www.beefcakeswimwear.com/
+                    </a>
+                </li>
+                <li>
+                    (masc-swim & binders) Muunne 
+                    <a href="https://www.muunne.com/">
+                        https://www.muunne.com/
+                    </a>
+                </li>
+                <li>
+                    (trans fem) Tuck Kits- safe for Swim 
+                    <a href="https://unclockable.ca/products/flawless-tuck-kit">
+                        https://unclockable.ca/products/flawless-tuck-kit
+                    </a>
+                </li>
+                <li>
+                    (trans fem underwear) 
+                    <a href="https://fit4usolutions.com/products/mtf-underwear-for-transgender?variant=39938989359149">
+                        https://fit4usolutions.com/products/mtf-underwear-for-transgender?variant=39938989359149
+                    </a>
+                </li>
+                <li>
+                    (trans fem underwear) 
+                    <a href="https://www.tuckituppp.com/product-page/logothick?utm_source=google&utm_medium=wix_google_channel&utm_campaign=freelistings">
+                        https://www.tuckituppp.com/product-page/logothick
+                    </a>
+                </li>
+            </ul>
+        </p>
+    </div>
+</div>
 <div style="border-style: solid; boder-width: 1%"></div>
 
 <p style="text-align: center;">
     Want to add something here? <br>
     Let @Pongo | <code>worldwidelgbtresources@gmail.com</code> <br>
     Technical difficulties? <br>
-    Let @Add know on <a href="discordapp.com/users/245579273052749825">Discord</a> or <a href="https://x.com/AddGaming2">Twitter</a>!
+    Let @Add know on 
+    <a href="discordapp.com/users/245579273052749825">
+        Discord
+    </a> 
+    or 
+    <a href="https://x.com/AddGaming2">
+        Twitter
+    </a>
+    !
 </p>
-<p style="text-align: center;">
+
+<div class="readable-div">
+<p class="readable-text">
     Disclaimer: <br>
     This advice is based on our lived experience, we are not doctors/therapists/lawyers/experts. 
     Any products/companies are just suggestions, use discretion. 
     Please use your own discretion and research with any advice listed. 
     Always seek the advice of your qualified health care provider regarding any medical questions.
 </p>
+</div>
     </body>
 </html>
