--- a/pages/bipoc_resources.html
+++ b/pages/bipoc_resources.html
@@ -1,116 +1,119 @@
-<h1>BIPOC specific resources</h1>
+<div class="readable-div">
+    <div class="readable-text">
+    <h1>BIPOC specific resources</h1>
 
-<h2 id="bipoc_educational">Educational</h2>
+        <h2 id="bipoc_educational">Educational</h2>
 
-<p>
-    What is intersectionality? <br>
-    <a href="https://www.youtube.com/watch?v=EXJ4Dbdm1ks">
-        https://www.youtube.com/watch?v=EXJ4Dbdm1ks
-    </a> 
-</p>    
-<p>
-    How does being LGBT and BIPOC overlap with pride? <br>
-    <a href="https://www.nbcnews.com/think/opinion/white-gay-privilege-exists-all-year-it-particularly-hurtful-during-ncna1024961">
-        https://www.nbcnews.com/think/opinion/white-gay-privilege-exists-all-year-it-particularly-hurtful-during-ncna1024961
-    </a> 
-    (TW: stone wall, white privilege,etc)
-</p>
+        <p>
+            What is intersectionality? <br>
+            <a href="https://www.youtube.com/watch?v=EXJ4Dbdm1ks">
+                https://www.youtube.com/watch?v=EXJ4Dbdm1ks
+            </a> 
+        </p>    
+        <p>
+            How does being LGBT and BIPOC overlap with pride? <br>
+            <a href="https://www.nbcnews.com/think/opinion/white-gay-privilege-exists-all-year-it-particularly-hurtful-during-ncna1024961">
+                https://www.nbcnews.com/think/opinion/white-gay-privilege-exists-all-year-it-particularly-hurtful-during-ncna1024961
+            </a> 
+            (TW: stone wall, white privilege,etc)
+        </p>
 
-<h3 id="bipoc_us">US</h3>
-<p>
-    Organizations by state: 
-    <a href="https://marshap.org">
-        https://marshap.org
-    </a>
-</p>
+        <h3 id="bipoc_us">US</h3>
+        <p>
+            Organizations by state: 
+            <a href="https://marshap.org">
+                https://marshap.org
+            </a>
+        </p>
 
-<h4 id="bipoc_texas">Texas specific resources</h4>
+        <h4 id="bipoc_texas">Texas specific resources</h4>
 
-<ul>
-    <li>
-        <a href="https://blacktransmen.org">
-            https://blacktransmen.org
-        </a> 
-        and 
-        <a href="https://blacktranswomen.org">
-            https://blacktranswomen.org
-        </a> 
-    </li>
-    <li>
-        Housing, clothing, jobs: 
-        <a href="https://www.themahoganyproject.org/community-center">
-            https://www.themahoganyproject.org/community-center
-        </a>
-    </li>
-    <li>
-        Trans-Latina: 
-        <a href="https://www.translatinacoalition.org/local-representation">
-            https://www.translatinacoalition.org/local-representation
-        </a> 
-    </li>
-    <li>
-        LGBT & AIDs walk Austin: 
-        <a href="https://allgo.org/about-us/">
-            https://allgo.org/about-us/
-        </a> 
-    </li>
-</ul>
+        <ul>
+            <li>
+                <a href="https://blacktransmen.org">
+                    https://blacktransmen.org
+                </a> 
+                and 
+                <a href="https://blacktranswomen.org">
+                    https://blacktranswomen.org
+                </a> 
+            </li>
+            <li>
+                Housing, clothing, jobs: 
+                <a href="https://www.themahoganyproject.org/community-center">
+                    https://www.themahoganyproject.org/community-center
+                </a>
+            </li>
+            <li>
+                Trans-Latina: 
+                <a href="https://www.translatinacoalition.org/local-representation">
+                    https://www.translatinacoalition.org/local-representation
+                </a> 
+            </li>
+            <li>
+                LGBT & AIDs walk Austin: 
+                <a href="https://allgo.org/about-us/">
+                    https://allgo.org/about-us/
+                </a> 
+            </li>
+        </ul>
 
-<div style="width:100%; height:1px; background-color:#000000;"></div>
+        <div style="width:100%; height:1px; background-color:#000000;"></div>
 
-<h3 id="bipoc_asia_pacific">Asian & Pacific Islander Resources for LGBT</h3>
+        <h3 id="bipoc_asia_pacific">Asian & Pacific Islander Resources for LGBT</h3>
 
-<ul>
-    <li>
-        <a href="https://www.sasmha.org/lgbtq">https://www.sasmha.org/lgbtq</a>
-    </li>
-    <li>
-        <a href="https://www.hrc.org/resources/coming-out-living-authentically-as-lgbtq-asian-and-pacific-islander-america">
-            https://www.hrc.org/resources/coming-out-living-authentically-as-lgbtq-asian-and-pacific-islander-america
-        </a> 
-    </li>
-</ul>
+        <ul>
+            <li>
+                <a href="https://www.sasmha.org/lgbtq">https://www.sasmha.org/lgbtq</a>
+            </li>
+            <li>
+                <a href="https://www.hrc.org/resources/coming-out-living-authentically-as-lgbtq-asian-and-pacific-islander-america">
+                    https://www.hrc.org/resources/coming-out-living-authentically-as-lgbtq-asian-and-pacific-islander-america
+                </a> 
+            </li>
+        </ul>
 
-<h3 id="bipoc_canada">Canada</h3>
+        <h3 id="bipoc_canada">Canada</h3>
 
-<p>
-    <li>
-        2 Spirit and Indigenous people resources:
-        <a href="https://guides.library.utoronto.ca/c.php?g=252092&p=5061887">https://guides.library.utoronto.ca/c.php?g=252092&p=5061887</a><br>
-    </li>
-    <li>
-        BIPOC, 2spirit, indigenous resources:
-        <a href="https://guides.wpl.winnipeg.ca/2SLGBTQQIA/organizations">https://guides.wpl.winnipeg.ca/2SLGBTQQIA/organizations</a>
-    </li>
-</p>
+        <p>
+            <li>
+                2 Spirit and Indigenous people resources:
+                <a href="https://guides.library.utoronto.ca/c.php?g=252092&p=5061887">https://guides.library.utoronto.ca/c.php?g=252092&p=5061887</a><br>
+            </li>
+            <li>
+                BIPOC, 2spirit, indigenous resources:
+                <a href="https://guides.wpl.winnipeg.ca/2SLGBTQQIA/organizations">https://guides.wpl.winnipeg.ca/2SLGBTQQIA/organizations</a>
+            </li>
+        </p>
 
-<h2 id="bipoc_mental_health">BIPOC Mental Health</h2> 
-<ul>
-    <li>
-        It gets better project, bipoc youth<br>
-        <a href="https://itgetsbetter.org/get-help/organizations-serving-the-black-lgbtq-community/">
-            https://itgetsbetter.org/get-help/organizations-serving-the-black-lgbtq-community/
-        </a>
-    </li>
-    <li>
-        BEAM: <a href="https://beam.community">https://beam.community</a><br>
-    </li>
-    <li>
-        We are native, lgbt health:
-        <a href="https://www.wernative.org/my-relationships/sexual-health/lgbt-two-spirit">https://www.wernative.org/my-relationships/sexual-health/lgbt-two-spirit</a><br>
-    </li>
-    <li>
-        NQTTCN: <a href="https://nqttcn.com/en/">https://nqttcn.com/en/</a><br>
-    </li>
-    <li>
-        Therapy for black girls: <a href="https://therapyforblackgirls.com">https://therapyforblackgirls.com</a><br>
-    </li>
-    <li>
-        Melanin and mental health: <a href="https://www.melaninandmentalhealth.com">https://www.melaninandmentalhealth.com</a><br>
-    </li>
-    <li>
-        Online Zoom class for Yoga & Meditation <br>
-        BIPOC Rest for Resistance: <a href="https://restforresistance.com/rest">https://restforresistance.com/rest</a><br>
-    </li>
-</ul>
-
+        <h2 id="bipoc_mental_health">BIPOC Mental Health</h2> 
+        <ul>
+            <li>
+                It gets better project, bipoc youth<br>
+                <a href="https://itgetsbetter.org/get-help/organizations-serving-the-black-lgbtq-community/">
+                    https://itgetsbetter.org/get-help/organizations-serving-the-black-lgbtq-community/
+                </a>
+            </li>
+            <li>
+                BEAM: <a href="https://beam.community">https://beam.community</a><br>
+            </li>
+            <li>
+                We are native, lgbt health:
+                <a href="https://www.wernative.org/my-relationships/sexual-health/lgbt-two-spirit">https://www.wernative.org/my-relationships/sexual-health/lgbt-two-spirit</a><br>
+            </li>
+            <li>
+                NQTTCN: <a href="https://nqttcn.com/en/">https://nqttcn.com/en/</a><br>
+            </li>
+            <li>
+                Therapy for black girls: <a href="https://therapyforblackgirls.com">https://therapyforblackgirls.com</a><br>
+            </li>
+            <li>
+                Melanin and mental health: <a href="https://www.melaninandmentalhealth.com">https://www.melaninandmentalhealth.com</a><br>
+            </li>
+            <li>
+                Online Zoom class for Yoga & Meditation <br>
+                BIPOC Rest for Resistance: <a href="https://restforresistance.com/rest">https://restforresistance.com/rest</a><br>
+            </li>
+        </ul>
+    </div>
+</div>
