--- a/trans_fem_resources.html
+++ b/trans_fem_resources.html
@@ -5,8 +5,16 @@
         <link rel="icon" type="image/svg" href="./img/favicon.svg" />
         <title>Worldwide LGBT Resources</title>
 <style>
-.readable_div {
+.readable-div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    max-width: 90%;
+    margin: auto;
+}
+.readable-text {
     max-width: 120ch;
+    margin: auto;
 }
 .flexbox {
     display: flex;
@@ -14,6 +22,9 @@
 }
 .box2 {
     width: 50%;
+}
+.put-left {
+    padding-right: 50%;
 }
 @media (max-aspect-ratio: 1/1) {
     .flexbox {
@@ -25,175 +36,182 @@
         width: 80%;
         margin: auto;
     }
+    .put-left {
+        padding-right: 0%;
+    }
 }
 </style>
     </head>
     <body>
-<h1>Trans fem specific resources</h1>
+<div class="readable-div">
+    <div class="readable-text">
+    <h1>Trans fem specific resources</h1>
 
-<h2 id="trans_fem_guides">Guides</h2>
+        <h2 id="trans_fem_guides">Guides</h2>
 
-<p>
-    Resource list including DIY Breast forms,hair loss,hrt,surgery, and many other topics. <br>
-    <a href="https://www.transgendermap.com/welcome/for-trans-people/transfeminine/">
-        https://www.transgendermap.com/welcome/for-trans-people/transfeminine/
-    </a> 
-</p>
+        <p>
+            Resource list including DIY Breast forms,hair loss,hrt,surgery, and many other topics. <br>
+            <a href="https://www.transgendermap.com/welcome/for-trans-people/transfeminine/">
+                https://www.transgendermap.com/welcome/for-trans-people/transfeminine/
+            </a> 
+        </p>
 
-<h2 id="trans_fem_hair">Hair</h2>
+        <h2 id="trans_fem_hair">Hair</h2>
 
-<h3 id="trans_fem_hair_wigs">Guide to wearing wigs for trans fem</h3> 
+        <h3 id="trans_fem_hair_wigs">Guide to wearing wigs for trans fem</h3> 
 
-<p>
-    <a href="https://unclockable.com/blogs/unclockable-blog/wigs-the-perfect-tool-for-transgender-women">
-        https://unclockable.com/blogs/unclockable-blog/wigs-the-perfect-tool-for-transgender-women
-    </a>
-</p>
+        <p>
+            <a href="https://unclockable.com/blogs/unclockable-blog/wigs-the-perfect-tool-for-transgender-women">
+                https://unclockable.com/blogs/unclockable-blog/wigs-the-perfect-tool-for-transgender-women
+            </a>
+        </p>
 
-<h3 id="trans_fem_hair_wigs_recommendations">Wig stores that were recommended by other trans women</h3>
-<ul>
-    <li>
-        <a href="https://wilshirewigs.com">https://wilshirewigs.com</a><br>
-    </li>
-    <li>
-        <a href="https://www.acewigs.com/shop/">https://www.acewigs.com/shop/</a>
-    </li>
-</ul>
+        <h3 id="trans_fem_hair_wigs_recommendations">Wig stores that were recommended by other trans women</h3>
+        <ul>
+            <li>
+                <a href="https://wilshirewigs.com">https://wilshirewigs.com</a><br>
+            </li>
+            <li>
+                <a href="https://www.acewigs.com/shop/">https://www.acewigs.com/shop/</a>
+            </li>
+        </ul>
 
-<h3 id="trans_fem_hair_guide">Fem hair guide</h3>
+        <h3 id="trans_fem_hair_guide">Fem hair guide</h3>
 
-<p>
-    <a href="https://unclockable.com/blogs/unclockable-blog/feminizing-hair-tips-for-every-face-type-in-progress">
-        https://unclockable.com/blogs/unclockable-blog/feminizing-hair-tips-for-every-face-type-in-progress
-    </a>
-</p>
+        <p>
+            <a href="https://unclockable.com/blogs/unclockable-blog/feminizing-hair-tips-for-every-face-type-in-progress">
+                https://unclockable.com/blogs/unclockable-blog/feminizing-hair-tips-for-every-face-type-in-progress
+            </a>
+        </p>
 
-<h3 id="trans_fem_hair_salon">Finding a safe trans hair salon</h3>
+        <h3 id="trans_fem_hair_salon">Finding a safe trans hair salon</h3>
 
-<ul>
-    <li>
-        <a href="https://strandsfortrans.org">
-            https://strandsfortrans.org
-        </a><br>
-        (US, CANADA, MEXICO, THE UK, NETHERLANDS, CZECHIA, FINLAND)<br>
-    </li>
-    <li>
-        <a href="https://www.everywhereisqueer.com/map">
-            use the everywhereisqueer map
-        </a>
-    </li>
-</ul>
+        <ul>
+            <li>
+                <a href="https://strandsfortrans.org">
+                    https://strandsfortrans.org
+                </a><br>
+                (US, CANADA, MEXICO, THE UK, NETHERLANDS, CZECHIA, FINLAND)<br>
+            </li>
+            <li>
+                <a href="https://www.everywhereisqueer.com/map">
+                    use the everywhereisqueer map
+                </a>
+            </li>
+        </ul>
 
-<h3 id="trans_fem_hair_loss">Prevent Hair loss</h3> 
+        <h3 id="trans_fem_hair_loss">Prevent Hair loss</h3> 
 
-<p>
-    <a href="https://www.aad.org/public/diseases/hair-loss/treatment/tips">
-        https://www.aad.org/public/diseases/hair-loss/treatment/tips
-    </a>
-</p>
+        <p>
+            <a href="https://www.aad.org/public/diseases/hair-loss/treatment/tips">
+                https://www.aad.org/public/diseases/hair-loss/treatment/tips
+            </a>
+        </p>
 
-<h3 id="trans_fem_hair_removal">Hair removal</h3>
+        <h3 id="trans_fem_hair_removal">Hair removal</h3>
 
-<p>
-    <a href="https://www.healthline.com/health/beauty-skin-care/laser-hair-removal-vs-electrolysis">
-        Laser Hair removal Vs Electrolysis - What is the difference?
-    </a> 
-</p>
-<p>
-    Grants for electrolysis hair removal:  <br>
-    <a href="https://www.pointofpride.org/electrolysis-support-fund">
-        https://www.pointofpride.org/electrolysis-support-fund
-    </a> 
-</p>
+        <p>
+            <a href="https://www.healthline.com/health/beauty-skin-care/laser-hair-removal-vs-electrolysis">
+                Laser Hair removal Vs Electrolysis - What is the difference?
+            </a> 
+        </p>
+        <p>
+            Grants for electrolysis hair removal:  <br>
+            <a href="https://www.pointofpride.org/electrolysis-support-fund">
+                https://www.pointofpride.org/electrolysis-support-fund
+            </a> 
+        </p>
 
-<h2 id="trans_fem_makeup">Makeup</h2>
-<ul>
-    <li>
-        Beginner and trans friendly makeup tips: 
-        <a href="https://www.youtube.com/@ThePrettyFix">https://www.youtube.com/@ThePrettyFix</a>
-    </li>
-</ul>
-<h2 id="trans_fem_body_shape">Body shape</h2>
-<ul>
-    <li>
-        Breast bra inserts,Gaffs,Tucking tape,dilators for post op: 
-        <a href="https://www.ftmessentials.com/collections/femme-items">https://www.ftmessentials.com/collections/femme-items</a>
-    </li>
-    <li>
-        How to tuck safely educational guide: 
-        <a href="https://www.transyouthequality.org/tucking">https://www.transyouthequality.org/tucking</a>
-    </li>
-    <li>
-        Article about Trans woman workouts to gain fem shape: 
-        <a href="https://www.wussymag.com/all/body-feminizing-workouts-for-trans-women-and-femmes-part-2">
-            https://www.wussymag.com/all/body-feminizing-workouts-for-trans-women-and-femmes-part-2
-        </a>
-    </li>
-    <li>
-        Grant for free fem shapewear: 
-        <a href="https://www.pointofpride.org/free-femme-shapewear">https://www.pointofpride.org/free-femme-shapewear</a>
-    </li>
-</ul>
+        <h2 id="trans_fem_makeup">Makeup</h2>
+        <ul>
+            <li>
+                Beginner and trans friendly makeup tips: 
+                <a href="https://www.youtube.com/@ThePrettyFix">https://www.youtube.com/@ThePrettyFix</a>
+            </li>
+        </ul>
+        <h2 id="trans_fem_body_shape">Body shape</h2>
+        <ul>
+            <li>
+                Breast bra inserts,Gaffs,Tucking tape,dilators for post op: 
+                <a href="https://www.ftmessentials.com/collections/femme-items">https://www.ftmessentials.com/collections/femme-items</a>
+            </li>
+            <li>
+                How to tuck safely educational guide: 
+                <a href="https://www.transyouthequality.org/tucking">https://www.transyouthequality.org/tucking</a>
+            </li>
+            <li>
+                Article about Trans woman workouts to gain fem shape: 
+                <a href="https://www.wussymag.com/all/body-feminizing-workouts-for-trans-women-and-femmes-part-2">
+                    https://www.wussymag.com/all/body-feminizing-workouts-for-trans-women-and-femmes-part-2
+                </a>
+            </li>
+            <li>
+                Grant for free fem shapewear: 
+                <a href="https://www.pointofpride.org/free-femme-shapewear">https://www.pointofpride.org/free-femme-shapewear</a>
+            </li>
+        </ul>
 
-<h2 id="trans_fem_bra">Bra/Chest</h2>
-<ul>
-    <li>
-        How to measure a bra to fit you: 
-        <a href="https://www.realsimple.com/beauty-fashion/clothing/shopping-guide/how-to-measure-bra-size">
-            realsimple.com - how to measure bra size
-        </a>
-    </li>
-</ul>
+        <h2 id="trans_fem_bra">Bra/Chest</h2>
+        <ul>
+            <li>
+                How to measure a bra to fit you: 
+                <a href="https://www.realsimple.com/beauty-fashion/clothing/shopping-guide/how-to-measure-bra-size">
+                    realsimple.com - how to measure bra size
+                </a>
+            </li>
+        </ul>
 
-<h2 id="trans_fem_surgery">Fem options for surgery</h2>
-<p>
-    Facial feminization: 
-    <a href="https://www.them.us/story/facial-feminization-surgery-recovery-tips">
-        https://www.them.us/story/facial-feminization-surgery-recovery-tips
-    </a><br>
-    (what is it, and how to heal)
-</p>
- 
-<h3 id="trans_fem_surgery_grants">Grants for surgery</h3>
+        <h2 id="trans_fem_surgery">Fem options for surgery</h2>
+        <p>
+            Facial feminization: 
+            <a href="https://www.them.us/story/facial-feminization-surgery-recovery-tips">
+                https://www.them.us/story/facial-feminization-surgery-recovery-tips
+            </a><br>
+            (what is it, and how to heal)
+        </p>
 
-<ul>
-    <li>
-        Jim Collins Grant for gender confirming surgery: 
-        <a href="https://jimcollinsfoundation.org/apply/">https://jimcollinsfoundation.org/apply/</a>
-    </li>
-    <li>
-        Trans justice fundraiser: 
-        <a href="https://www.transjusticefundingproject.org/apply/">https://www.transjusticefundingproject.org/apply/</a> 
-    </li>
-    <li>
-        Gender care grant: 
-        <a href="https://www.genderbands.org/grants">https://www.genderbands.org/grants</a> 
-    </li>
-    <li>
-        POP Surgery grant: 
-        <a href="https://www.pointofpride.org/annual-transgender-surgery-fund">https://www.pointofpride.org/annual-transgender-surgery-fund</a> 
-    </li>
-    <li>
-        Trans United grant: 
-        <a href="https://tufforg.wixsite.com/tuffnew/apply">https://tufforg.wixsite.com/tuffnew/apply</a> 
-    </li>
-    <li>
-        Healthcare: 
-        <a href="https://ariannas-center.org/causes/stipend-request/">https://ariannas-center.org/causes/stipend-request/</a> 
-    </li>
-    <li>
-        US trans grant: 
-        <a href="https://www.loftgaycenter.org/transmission">https://www.loftgaycenter.org/transmission</a> 
-    </li>
-    <li>
-        Autistic BIPOC grant: 
-        <a href="https://autismandrace.com/autistic-people-of-color-fund/faqs/">https://autismandrace.com/autistic-people-of-color-fund/faqs/</a> 
-    </li>
-    <li>
-        Black trans grants:
-        <a href="https://www.forthegworls.com/home">https://www.forthegworls.com/home</a> 
-    </li>
-</ul>
+        <h3 id="trans_fem_surgery_grants">Grants for surgery</h3>
+
+        <ul>
+            <li>
+                Jim Collins Grant for gender confirming surgery: 
+                <a href="https://jimcollinsfoundation.org/apply/">https://jimcollinsfoundation.org/apply/</a>
+            </li>
+            <li>
+                Trans justice fundraiser: 
+                <a href="https://www.transjusticefundingproject.org/apply/">https://www.transjusticefundingproject.org/apply/</a> 
+            </li>
+            <li>
+                Gender care grant: 
+                <a href="https://www.genderbands.org/grants">https://www.genderbands.org/grants</a> 
+            </li>
+            <li>
+                POP Surgery grant: 
+                <a href="https://www.pointofpride.org/annual-transgender-surgery-fund">https://www.pointofpride.org/annual-transgender-surgery-fund</a> 
+            </li>
+            <li>
+                Trans United grant: 
+                <a href="https://tufforg.wixsite.com/tuffnew/apply">https://tufforg.wixsite.com/tuffnew/apply</a> 
+            </li>
+            <li>
+                Healthcare: 
+                <a href="https://ariannas-center.org/causes/stipend-request/">https://ariannas-center.org/causes/stipend-request/</a> 
+            </li>
+            <li>
+                US trans grant: 
+                <a href="https://www.loftgaycenter.org/transmission">https://www.loftgaycenter.org/transmission</a> 
+            </li>
+            <li>
+                Autistic BIPOC grant: 
+                <a href="https://autismandrace.com/autistic-people-of-color-fund/faqs/">https://autismandrace.com/autistic-people-of-color-fund/faqs/</a> 
+            </li>
+            <li>
+                Black trans grants:
+                <a href="https://www.forthegworls.com/home">https://www.forthegworls.com/home</a> 
+            </li>
+        </ul>
+    </div>
+</div>
 
 <div style="border-style: solid; boder-width: 1%"></div>
 
@@ -201,14 +219,25 @@
     Want to add something here? <br>
     Let @Pongo | <code>worldwidelgbtresources@gmail.com</code> <br>
     Technical difficulties? <br>
-    Let @Add know on <a href="discordapp.com/users/245579273052749825">Discord</a> or <a href="https://x.com/AddGaming2">Twitter</a>!
+    Let @Add know on 
+    <a href="discordapp.com/users/245579273052749825">
+        Discord
+    </a> 
+    or 
+    <a href="https://x.com/AddGaming2">
+        Twitter
+    </a>
+    !
 </p>
-<p style="text-align: center;">
+
+<div class="readable-div">
+<p class="readable-text">
     Disclaimer: <br>
     This advice is based on our lived experience, we are not doctors/therapists/lawyers/experts. 
     Any products/companies are just suggestions, use discretion. 
     Please use your own discretion and research with any advice listed. 
     Always seek the advice of your qualified health care provider regarding any medical questions.
 </p>
+</div>
     </body>
 </html>
