--- a/nonbinary_and_intersex_resources.html
+++ b/nonbinary_and_intersex_resources.html
@@ -5,8 +5,16 @@
         <link rel="icon" type="image/svg" href="./img/favicon.svg" />
         <title>Worldwide LGBT Resources</title>
 <style>
-.readable_div {
+.readable-div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    max-width: 90%;
+    margin: auto;
+}
+.readable-text {
     max-width: 120ch;
+    margin: auto;
 }
 .flexbox {
     display: flex;
@@ -14,6 +22,9 @@
 }
 .box2 {
     width: 50%;
+}
+.put-left {
+    padding-right: 50%;
 }
 @media (max-aspect-ratio: 1/1) {
     .flexbox {
@@ -25,40 +36,60 @@
         width: 80%;
         margin: auto;
     }
+    .put-left {
+        padding-right: 0%;
+    }
 }
 </style>
     </head>
     <body>
-<h1>Nonbinary and Intersex specific resources</h1>
+<div class="readable-div">
+    <div class="readable-text">
+        <h1 class="readable">
+            Nonbinary and Intersex specific resources
+        </h1>
 
 
-<h2 id="nonbinary_and_intersex_general_resources">
-    General Resources
-</h2>
+        <h2 id="nonbinary_and_intersex_general_resources">
+            General Resources
+        </h2>
 
-<p>
-    Resource list including Nonbinary HRT & surgery options, and many other topics
-    <a href="https://www.transgendermap.com/welcome/for-trans-people/gender-diverse/">
-        https://www.transgendermap.com/welcome/for-trans-people/gender-diverse/
-    </a>
-</p>
-<p>
-    More coming Soon….. Please suggest things to @pongo.
-</p>
+        <p>
+            Resource list including Nonbinary HRT & surgery options, and many other topics
+            <a href="https://www.transgendermap.com/welcome/for-trans-people/gender-diverse/">
+                https://www.transgendermap.com/welcome/for-trans-people/gender-diverse/
+            </a>
+        </p>
+        <p>
+            More coming Soon….. Please suggest things to @pongo.
+        </p>
+    </div>
+</div>
 <div style="border-style: solid; boder-width: 1%"></div>
 
 <p style="text-align: center;">
     Want to add something here? <br>
     Let @Pongo | <code>worldwidelgbtresources@gmail.com</code> <br>
     Technical difficulties? <br>
-    Let @Add know on <a href="discordapp.com/users/245579273052749825">Discord</a> or <a href="https://x.com/AddGaming2">Twitter</a>!
+    Let @Add know on 
+    <a href="discordapp.com/users/245579273052749825">
+        Discord
+    </a> 
+    or 
+    <a href="https://x.com/AddGaming2">
+        Twitter
+    </a>
+    !
 </p>
-<p style="text-align: center;">
+
+<div class="readable-div">
+<p class="readable-text">
     Disclaimer: <br>
     This advice is based on our lived experience, we are not doctors/therapists/lawyers/experts. 
     Any products/companies are just suggestions, use discretion. 
     Please use your own discretion and research with any advice listed. 
     Always seek the advice of your qualified health care provider regarding any medical questions.
 </p>
+</div>
     </body>
 </html>
