--- a/pages/lgbt_friendly_resources.html
+++ b/pages/lgbt_friendly_resources.html
@@ -1,169 +1,173 @@
-<h1>Finding an LGBT friendly resource</h1>
+<div class="readable-div">
+    <div class="readable-text">
+    <h1>Finding an LGBT friendly resource</h1>
 
-<h2 id="friendly_doctors_and_therapists">
-    Where can I find an LGBT friendly doctor or therapist?
-</h2> 
+        <h2 id="friendly_doctors_and_therapists">
+            Where can I find an LGBT friendly doctor or therapist?
+        </h2> 
 
-<p>
-    <i>
-        <a href="./legal_help_for_lgbt.html">
-            *Worldwide Crisis lines are here*
-        </a>
-    </i> 
-</p>
+        <p>
+            <i>
+                <a href="./legal_help_for_lgbt.html">
+                    *Worldwide Crisis lines are here*
+                </a>
+            </i> 
+        </p>
 
-<ul>
-    <li>
-        <b>Worldwide map</b> for LGBT friendly businesses 
-        <a href="https://www.everywhereisqueer.com/map">
-            https://www.everywhereisqueer.com/map
-        </a> 
-    </li>
-    <li>
-        <b>Worldwide Therapist</b> Search 
-        <a href="https://www.psychologytoday.com/us/therapists">
-            https://www.psychologytoday.com/us/therapists
-        </a><br>
-        Select <i>*more*</i> click “LGBT”, 
-        or select <i>*issue*</i> click “<i>transgender</i>”
-    </li>
-    <li>
-        <b>US therapists</b>: 
-        Need a more affordable therapy option for around $30usd or more? <br>
-        <a href="https://openpathcollective.org">
-            https://openpathcollective.org
-        </a>
-    </li>
-    <li>
-        <b>US</b> therapy grants: 
-        <a href="https://nqttcn.com/en/mental-health-fund/">
-            https://nqttcn.com/en/mental-health-fund/
-        </a> 
-    </li>
-    <li>
-        <b>Germany:</b>
         <ul>
             <li>
-                Lgbt therapists directory: 
-                <a href="https://queermed-deutschland.de/en/">
-                    https://queermed-deutschland.de/en/
+                <b>Worldwide map</b> for LGBT friendly businesses 
+                <a href="https://www.everywhereisqueer.com/map">
+                    https://www.everywhereisqueer.com/map
+                </a> 
+            </li>
+            <li>
+                <b>Worldwide Therapist</b> Search 
+                <a href="https://www.psychologytoday.com/us/therapists">
+                    https://www.psychologytoday.com/us/therapists
+                </a><br>
+                Select <i>*more*</i> click “LGBT”, 
+                or select <i>*issue*</i> click “<i>transgender</i>”
+            </li>
+            <li>
+                <b>US therapists</b>: 
+                Need a more affordable therapy option for around $30usd or more? <br>
+                <a href="https://openpathcollective.org">
+                    https://openpathcollective.org
                 </a>
             </li>
             <li>
-                Therapists directory: 
-                <a href="https://www.lgbtqandall.com/resources/mental-health/europe/germany/berlin/">
-                    https://www.lgbtqandall.com/resources/mental-health/europe/germany/berlin/
-                </a>
+                <b>US</b> therapy grants: 
+                <a href="https://nqttcn.com/en/mental-health-fund/">
+                    https://nqttcn.com/en/mental-health-fund/
+                </a> 
             </li>
             <li>
-                International therapist map: 
-                <a href="https://internationaltherapistdirectory.com/location/germany-1/">
-                    https://internationaltherapistdirectory.com/location/germany-1/
-                </a>
+                <b>Germany:</b>
+                <ul>
+                    <li>
+                        Lgbt therapists directory: 
+                        <a href="https://queermed-deutschland.de/en/">
+                            https://queermed-deutschland.de/en/
+                        </a>
+                    </li>
+                    <li>
+                        Therapists directory: 
+                        <a href="https://www.lgbtqandall.com/resources/mental-health/europe/germany/berlin/">
+                            https://www.lgbtqandall.com/resources/mental-health/europe/germany/berlin/
+                        </a>
+                    </li>
+                    <li>
+                        International therapist map: 
+                        <a href="https://internationaltherapistdirectory.com/location/germany-1/">
+                            https://internationaltherapistdirectory.com/location/germany-1/
+                        </a>
+                    </li>
+                </ul>
             </li>
         </ul>
-    </li>
-</ul>
 
-<div style="width:100%; height:1px; background-color:#000000;"></div>
-<!-- hot does this second listing differ from the one above? -->
-<ul>
-    <li>
-        <b>Erin’s informed consent doctors worldwide map: </b><br>
-        <a href="https://www.google.com/maps/d/u/0/viewer?mid=1DxyOTw8dI8n96BHFF2JVUMK7bXsRKtzA&hl=en_US&fbclid=IwAR1jIX9jDjYvU1MthjAymNw0QBcywO0RChGI8E13UfcoJwweaauI9uqp-6Q&ll=38.53652162688942%2C-102.18971259900887&z=6">
-            https://www.google.com/maps/
-        </a>
-    </li>
-    <li>
-        <b>US resources:</b>
+        <div style="width:100%; height:1px; background-color:#000000;"></div>
+        <!-- hot does this second listing differ from the one above? -->
         <ul>
             <li>
-                Help moving & housing, finding hrt, and more: 
-                <a href="https://rainbowpassage.org/intake">
-                    https://rainbowpassage.org/intake
+                <b>Erin’s informed consent doctors worldwide map: </b><br>
+                <a href="https://www.google.com/maps/d/u/0/viewer?mid=1DxyOTw8dI8n96BHFF2JVUMK7bXsRKtzA&hl=en_US&fbclid=IwAR1jIX9jDjYvU1MthjAymNw0QBcywO0RChGI8E13UfcoJwweaauI9uqp-6Q&ll=38.53652162688942%2C-102.18971259900887&z=6">
+                    https://www.google.com/maps/
                 </a>
             </li>
             <li>
-                US doctors: 
-                <a href="https://lgbtqhealthcaredirectory.org">
-                    https://lgbtqhealthcaredirectory.org
-                </a>
+                <b>US resources:</b>
+                <ul>
+                    <li>
+                        Help moving & housing, finding hrt, and more: 
+                        <a href="https://rainbowpassage.org/intake">
+                            https://rainbowpassage.org/intake
+                        </a>
+                    </li>
+                    <li>
+                        US doctors: 
+                        <a href="https://lgbtqhealthcaredirectory.org">
+                            https://lgbtqhealthcaredirectory.org
+                        </a>
+                    </li>
+                    <li>
+                        Lgbt HRT company for online prescriptions: 
+                        <a href="https://getplume.co">
+                            https://getplume.co
+                        </a>
+                    </li>
+                    <li>
+                        US LGBT directory: 
+                        <a href="https://www.lgbtnearme.org">
+                            https://www.lgbtnearme.org
+                        </a>
+                    </li>
+                    <li>
+                        US Southern States directory for doctors: 
+                        <a href="https://southernequality.org/resources/transinthesouth/">
+                            https://southernequality.org/resources/transinthesouth/
+                        </a>
+                    </li>
+                </ul>
             </li>
             <li>
-                Lgbt HRT company for online prescriptions: 
-                <a href="https://getplume.co">
-                    https://getplume.co
-                </a>
+                <b>UK resources:</b>
+                <ul>
+                    <li>
+                        Doctors:
+                        <a href="https://www.transhealthcareintel.com/trans-friendly-gps">
+                            https://www.transhealthcareintel.com/trans-friendly-gps
+                        </a> 
+                    </li>
+                    <li>
+                        Trans friendly UK doctors: 
+                        <a href="https://docs.google.com/spreadsheets/d/1b5SSnb7LBUlWSjasN2ld7qPGmEchgDG8voUY-SkfAlw/edit#gid=0">
+                            https://docs.google.com/spreadsheets/
+                        </a> 
+                    </li>
+                    <li>
+                        LGBT medical support 
+                        <a href="https://www.bma.org.uk/advice-and-support/equality-and-diversity-guidance/lgbtplus-equality-in-medicine/lgbtqplus-equality-in-medicine">
+                            https://www.bma.org.uk/advice-and-support/equality-and-diversity-guidance/lgbtplus-equality-in-medicine/lgbtqplus-equality-in-medicine
+                        </a> 
+                    </li>
+                </ul>
             </li>
             <li>
-                US LGBT directory: 
-                <a href="https://www.lgbtnearme.org">
-                    https://www.lgbtnearme.org
-                </a>
+                <b>Canada:</b>
+                <ul>
+                    <li>
+                        Health clinics:
+                        <a href="https://www.rainbowhealthontario.ca/2slgbtq-health-resources/">
+                            https://www.rainbowhealthontario.ca/2slgbtq-health-resources/
+                        </a> 
+                    </li>
+                    <li>
+                        Informed Consent clinic Ontario:
+                        <a href="https://guelphchc.ca">
+                            https://guelphchc.ca
+                        </a> 
+                    </li>
+                </ul>
             </li>
             <li>
-                US Southern States directory for doctors: 
-                <a href="https://southernequality.org/resources/transinthesouth/">
-                    https://southernequality.org/resources/transinthesouth/
-                </a>
+                <b>Germany:</b> <br>
+                <ul>
+                    <li>
+                        medical, hrt, legal, etc: 
+                        <a href="https://schwulenberatungberlin.de/transitioning-in-berlin/">
+                            https://schwulenberatungberlin.de/transitioning-in-berlin/
+                        </a>:
+                    </li>
+                    <li>
+                        Find a doctor near you:
+                        <a href="https://queermed-deutschland.de/en/look-for-recommendations/">
+                            https://queermed-deutschland.de/en/look-for-recommendations/
+                        </a> 
+                    </li>
+                </ul>
             </li>
         </ul>
-    </li>
-    <li>
-        <b>UK resources:</b>
-        <ul>
-            <li>
-                Doctors:
-                <a href="https://www.transhealthcareintel.com/trans-friendly-gps">
-                    https://www.transhealthcareintel.com/trans-friendly-gps
-                </a> 
-            </li>
-            <li>
-                Trans friendly UK doctors: 
-                <a href="https://docs.google.com/spreadsheets/d/1b5SSnb7LBUlWSjasN2ld7qPGmEchgDG8voUY-SkfAlw/edit#gid=0">
-                    https://docs.google.com/spreadsheets/
-                </a> 
-            </li>
-            <li>
-                LGBT medical support 
-                <a href="https://www.bma.org.uk/advice-and-support/equality-and-diversity-guidance/lgbtplus-equality-in-medicine/lgbtqplus-equality-in-medicine">
-                    https://www.bma.org.uk/advice-and-support/equality-and-diversity-guidance/lgbtplus-equality-in-medicine/lgbtqplus-equality-in-medicine
-                </a> 
-            </li>
-        </ul>
-    </li>
-    <li>
-        <b>Canada:</b>
-        <ul>
-            <li>
-                Health clinics:
-                <a href="https://www.rainbowhealthontario.ca/2slgbtq-health-resources/">
-                    https://www.rainbowhealthontario.ca/2slgbtq-health-resources/
-                </a> 
-            </li>
-            <li>
-                Informed Consent clinic Ontario:
-                <a href="https://guelphchc.ca">
-                    https://guelphchc.ca
-                </a> 
-            </li>
-        </ul>
-    </li>
-    <li>
-        <b>Germany:</b> <br>
-        <ul>
-            <li>
-                medical, hrt, legal, etc: 
-                <a href="https://schwulenberatungberlin.de/transitioning-in-berlin/">
-                    https://schwulenberatungberlin.de/transitioning-in-berlin/
-                </a>:
-            </li>
-            <li>
-                Find a doctor near you:
-                <a href="https://queermed-deutschland.de/en/look-for-recommendations/">
-                    https://queermed-deutschland.de/en/look-for-recommendations/
-                </a> 
-            </li>
-        </ul>
-    </li>
-</ul>
+    </div>
+</div>
