--- a/pages/nonbinary_and_intersex_resources.html
+++ b/pages/nonbinary_and_intersex_resources.html
@@ -1,16 +1,22 @@
-<h1>Nonbinary and Intersex specific resources</h1>
+<div class="readable-div">
+    <div class="readable-text">
+        <h1 class="readable">
+            Nonbinary and Intersex specific resources
+        </h1>
 
 
-<h2 id="nonbinary_and_intersex_general_resources">
-    General Resources
-</h2>
+        <h2 id="nonbinary_and_intersex_general_resources">
+            General Resources
+        </h2>
 
-<p>
-    Resource list including Nonbinary HRT & surgery options, and many other topics
-    <a href="https://www.transgendermap.com/welcome/for-trans-people/gender-diverse/">
-        https://www.transgendermap.com/welcome/for-trans-people/gender-diverse/
-    </a>
-</p>
-<p>
-    More coming Soon….. Please suggest things to @pongo.
-</p>
+        <p>
+            Resource list including Nonbinary HRT & surgery options, and many other topics
+            <a href="https://www.transgendermap.com/welcome/for-trans-people/gender-diverse/">
+                https://www.transgendermap.com/welcome/for-trans-people/gender-diverse/
+            </a>
+        </p>
+        <p>
+            More coming Soon….. Please suggest things to @pongo.
+        </p>
+    </div>
+</div>
