pages now get the correct title again

--- a/nonbinary_and_intersex_resources.html
+++ b/nonbinary_and_intersex_resources.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg" href="./img/favicon.svg" />
-        <title>Worldwide LGBT Resources</title>
+        <title>Nonbinary And Intersex Resources</title>
 <style>
 .readable-div {
     display: flex;
