light and dark mode

--- a/pregnancy_and_parenting.html
+++ b/pregnancy_and_parenting.html
@@ -4,6 +4,39 @@
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg" href="./img/favicon.svg" />
         <title>Pregnancy And Parenting</title>
+<!--
+let s:rosewater = "#ffdbd2"
+let s:flamingo = "#ffc0c0"
+let s:pink = "#ffb8eb"
+let s:mauve = "#ca9eff"
+let s:red = "#f985a5"
+let s:maroon = "#f497a7"
+let s:peach = "#fcb385"
+let s:yellow = "#fde3ab"
+let s:green = "#93f88c"
+let s:teal = "#59f8db"
+let s:sky = "#84eafa"
+let s:sapphire = "#56c6fb"
+let s:blue = "#75aaff"
+let s:dark_blue = "#436597"
+let s:bright_blue = "#9ac9fa"
+let s:lavender = "#99a4ff"
+
+let s:text = "#f8f8f8"
+let s:subtext1 = "#bac2de"
+let s:subtext0 = "#a6adc8"
+let s:overlay2 = "#9697a5"
+let s:overlay1 = "#777a8b"
+let s:overlay0 = "#5f6270"
+let s:surface2 = "#585b70"
+let s:surface1 = "#45475a"
+let s:surface0 = "#313244"
+let s:underlay0 = "#2c2c30"
+
+let s:base = "#161616"
+let s:mantle = "#181825"
+let s:crust = "#11111b"
+-->
 <style>
 .readable-div {
     display: flex;
@@ -38,6 +71,40 @@
     }
     .put-left {
         padding-right: 0%;
+    }
+}
+@media (prefers-color-scheme: dark) {
+    body {
+        background-color: #161616;
+        color: #f8f8f8;
+    }
+    a:link {
+        color: #75aaff;       
+        text-decoration: none;
+    }
+    a:visited {
+        color: #99a4ff;       
+        text-decoration: none;
+    }
+    a:hover {
+        text-decoration: underline;
+    }
+}
+@media (prefers-color-scheme: light) {
+    body {
+        background-color: #f8f8f8;
+        color: #11111b;
+    }
+    a:link {
+        color: #2660b4;       
+        text-decoration: none;
+    }
+    a:visited {
+        color: #593e9c;       
+        text-decoration: none;
+    }
+    a:hover {
+        text-decoration: underline;
     }
 }
 </style>
